--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
@@ -378,16 +378,16 @@
                                                     I accept this is a donation and if I pay, I will receive 30 available days from today, to use this app!
                                                 </div>
                                                 <br/>
-                                                <div class="show-not-verified-user" style="display: none">
+                                                <div>
                                                     Benefits:
                                                 </div>
-                                                <div class="show-not-verified-user" style="display: none">
+                                                <div>
                                                     <br/>
                                                 </div>
-                                                <div class="show-not-verified-user" style="display: none">
-                                                    Get verified: Auto ads switch, Avatar, Pi Ads <i class="fa-solid fa-plug-circle-bolt"></i>x2 points, access to Chess, Sudoku and Snake.
+                                                <div>
+                                                    <strong>Get verified: Auto ads switch (ON or OFF), change Avatar, Pi Ads <i class="fa-solid fa-plug-circle-bolt"></i>x2 points, access to Chess, Sudoku, Snake and all the dApps and functionalities in LatinChain Platoform and RadioForUs.</strong>
                                                 </div>
-                                                <div class="show-not-verified-user" style="display: none">
+                                                <div>
                                                     <br/>
                                                 </div>
                                                 <!--<div>
