--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
@@ -376,6 +376,18 @@
                                                     I accept this is a donation and if I pay, I will receive 30 available days from today, to use this app!
                                                 </div>
                                                 <br/>
+                                                <div>
+                                                    Benefits:
+                                                </div>
+                                                <div>
+                                                    <br/>
+                                                </div>
+                                                <div>
+                                                    <strong>Get verified: Auto ads switch (ON or OFF), change Avatar, Pi Ads <i class="fa-solid fa-plug-circle-bolt"></i>x2 points, access to Chess, Sudoku, Snake and all the dApps and functionalities in LatinChain Platoform and RadioForUs.</strong>
+                                                </div>
+                                                <div>
+                                                    <br/>
+                                                </div>
                                               </label>
                                             </div>
                                         </div>
