--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
@@ -383,7 +383,11 @@
                                                     <br/>
                                                 </div>
                                                 <div>
-                                                    <strong>Get verified: Auto ads switch (ON or OFF), change Avatar, Pi Ads <i class="fa-solid fa-plug-circle-bolt"></i>x2 points, access to Chess, Sudoku, Snake and all the dApps and functionalities in LatinChain Platoform and RadioForUs.</strong>
+                                                    <strong>Get verified: <br/>
+                                                    LatinChain Benefits: Auto ads switch (ON or OFF), change Avatar, Pi Ads <i class="fa-solid fa-plug-circle-bolt"></i>x2 points, access to Chess, Sudoku, Snake, all the dApps and functionalities in LatinChain Platoform.
+                                                    <br/>
+                                                    RadioForUs Benefits: Auto ads switch (ON or OFF), access to all the dApps, functionalities, Music and Radio in RadioForUs.
+                                                    </strong>
                                                 </div>
                                                 <div>
                                                     <br/>
