--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
@@ -386,7 +386,7 @@
                                                 </div>
                                                 <div>
                                                     <strong>Get verified: <br/>
-                                                    LatinChain Benefits: Auto ads switch (ON or OFF), change Avatar, Pi Ads <i class="fa-solid fa-plug-circle-bolt"></i>x2 points, access to Chess, Sudoku, Snake, all the dApps and functionalities in LatinChain Platoform.
+                                                    LatinChain Benefits: Auto ads switch (ON or OFF), change Avatar, Pi Ads <i class="fa-solid fa-plug-circle-bolt"></i>x2 points, access to Chess, Sudoku, Snake, all the dApps and functionalities in LatinChain Platform.
                                                     <br/>
                                                     RadioForUs Benefits: Auto ads switch (ON or OFF), access to all the dApps, functionalities, Music and Radio in RadioForUs.
                                                     </strong>
