--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
@@ -383,7 +383,7 @@
                                                     <br/>
                                                 </div>
                                                 <div>
-                                                    <strong>Get verified: <br/>
+                                                    <strong>
                                                     LatinChain Benefits: Auto ads switch (ON or OFF), change Avatar, Pi Ads <i class="fa-solid fa-plug-circle-bolt"></i>x2 points, access to Chess, Sudoku, Snake, all the dApps and functionalities in LatinChain Platform.
                                                     <br/>
                                                     RadioForUs Benefits: Auto ads switch (ON or OFF), access to all the dApps, functionalities, Music and Radio in RadioForUs.
