--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
@@ -300,7 +300,7 @@
                           
                         </ul>
                         <div class="tab-content" id="myTabContent">
-                            <div class="tab-pane fade show active container" id="home" role="tabpanel" aria-labelledby="home-tab">
+                            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                                 <div class="container" style="text-align:center; max-width: 840px">
                                     <br/>
                                     <!--<img  width="80" height="80" src="/website_pinetwork_games_odoo/static/src/img/latin-chain-logo.jpeg" style="display: block; margin-left: auto; margin-right: auto"/>-->
@@ -384,7 +384,7 @@
                                                 </div>
                                                 <div>
                                                     <strong>
-                                                    LatinChain Benefits: Auto ads switch (ON or OFF), change Avatar, Pi Ads <i class="fa-solid fa-plug-circle-bolt"></i>x2 points, access to Chess, Sudoku, Snake, all the dApps and functionalities in LatinChain Platform.
+                                                    LatinChain Benefits: Receive LatinAuto ads switch (ON or OFF), change Avatar, Pi Ads <i class="fa-solid fa-plug-circle-bolt"></i>x2 points, access to Chess, Sudoku, Snake, all the dApps and functionalities in LatinChain Platform.
                                                     <br/>
                                                     RadioForUs Benefits: Auto ads switch (ON or OFF), access to all the dApps, functionalities, Music and Radio in RadioForUs.
                                                     </strong>
