--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
@@ -384,9 +384,9 @@
                                                 </div>
                                                 <div>
                                                     <strong>
-                                                    LatinChain Benefits: Receive LatinAuto ads switch (ON or OFF), change Avatar, Pi Ads <i class="fa-solid fa-plug-circle-bolt"></i>x2 points, access to Chess, Sudoku, Snake, all the dApps and functionalities in LatinChain Platform.
+                                                    <u>LatinChain Benefits:</u> Receive LatinAuto ads switch (ON or OFF), change Avatar, Pi Ads <i class="fa-solid fa-plug-circle-bolt"></i>x2 points, access to Chess, Sudoku, Snake, all the dApps and functionalities in LatinChain Platform.
                                                     <br/>
-                                                    RadioForUs Benefits: Auto ads switch (ON or OFF), access to all the dApps, functionalities, Music and Radio in RadioForUs.
+                                                    <u>RadioForUs Benefits:</u> Auto ads switch (ON or OFF), access to all the dApps, functionalities, Music and Radio in RadioForUs.
                                                     </strong>
                                                 </div>
                                                 <div>
