--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
@@ -386,9 +386,9 @@
                                                 </div>
                                                 <div>
                                                     <strong>
-                                                    <u>LatinChain Benefits:</u> Auto ads switch (ON or OFF), change Avatar, Pi Ads <i class="fa-solid fa-plug-circle-bolt"></i>x2 points, access to Chess, Sudoku, Snake, all the dApps and functionalities in LatinChain Platform.
+                                                    <u>LatinChain Benefits:</u> Auto ads switch (ON or OFF), change Avatar, Pi Ads <i class="fa-solid fa-plug-circle-bolt"></i>x2 points, access to all Games, all dApps and functionalities in LatinChain Platform.
                                                     <br/>
-                                                    <u>RadioForUs Benefits:</u> Auto ads switch (ON or OFF), access to all the dApps, functionalities, Music and Radio in RadioForUs.
+                                                    <u>RadioForUs Benefits:</u> Auto ads switch (ON or OFF), access to all Music, all Radio stations, all dApps, and functionalities in RadioForUs.
                                                     </strong>
                                                 </div>
                                                 <div>
