--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -181,7 +181,7 @@
                             </div>
                             
                             <div style="font-size: 90%" t-if="onlymainnet">
-                                We are testing LatinChain Mainnet on Pi Network cryptocurrency ecosystem. 
+                                We are testing LatinChain Mainnet on Pi Network cryptocurrency ecosystem. Get double utility usage bonus <i class="fa-solid fa-bolt"></i> by using both Mainnet and Testnet.
                                 <a href="https://latinchain.pinet.com/index-nopopup" target="_blank" class="btn btn-link mb-2 o_default_snippet_text">Close this page</a>
                             </div>
                             
